# buecherhallen

./: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml
auth/: login.py
media/: item.py  watchlist.py
src/auth/: credentials.py  login.py
src/buecherhallen/: app.py  main.py
src/buecherhallen/auth/: bot_protection.py  cache.py  credentials.py  login.py
src/buecherhallen/common/: constants.py  options.py
src/buecherhallen/log/: custom_formatter.py
src/buecherhallen/media/: item.py  list_item.py  watchlist.py
src/buecherhallen/ui/: index.py  site.py
src/buecherhallen/ui/templates/: index.j2
src/media/: watchlist.py
ui/: index.py  site.py
ui/templates/: index.j2
