[project]
name = "buecherhallen"
version = "0.1.0"
description = "Generates an HTML page with available media grouped by location based on your personal watch list from for the Hamburg public libraries."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "jinja2>=3.1.6",
    "requests==2.32.3",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
