[project]
name = "buecherhallen"
version = "0.1.0"
description = "Generates an HTML page with available media grouped by location based on your personal watch list from for the Hamburg public libraries."
requires-python = ">=3.12"
dependencies = [
    "camoufox[geoip]>=0.5.4",
    "jinja2>=3.1.6",
    "requests>=2.34.2",
]

[project.scripts]
buecherhallen = "buecherhallen.main:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
